src/core/validate/grammar/context.peggy
// Context grammar — phase decisions with D- numbering

Context
  = "# Context:" __ name:LineRest NEWLINE
    body:ContextLine*
    { return { name, decisions: body.filter(b => b && b.id !== undefined) }; }

ContextLine
  = d:Decision { return d; }
  / NEWLINE { return null; }
  / __ text:LineRest NEWLINE { return null; }

Decision
  = "## D-" id:Integer ": " title:LineRest NEWLINE
    "- Status: " status:LineRest NEWLINE
    "- Reason: " reason:LineRest NEWLINE
    references:RefLine?
    { return { id, title, status, reason }; }
  / "## D-" text:$[^:\n]+ { error('"D-' + text.split(':')[0].trim() + '": ID must be numeric (e.g. "D-1")'); }

RefLine
  = "- References: " text:LineRest NEWLINE

LineRest
  = chars:[^\n\r]+ { return chars.join("").trim(); }

Integer
  = digits:[0-9]+ { return parseInt(digits.join("")); }

_ = [ 	]*
__
  = [ \t]*

NEWLINE
  = "\n" / "\r\n" / "\r"
